# stocky-cognitive-runtime

./: .agent.md  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  INVARIANTS.md  LICENSE  PHASE_O_OPENCODE_ADAPTER_REPORT.md  README.md  Stocky Engineering OS.code-workspace  pyproject.toml  pytest.ini  run_alpha1.py  run_alpha2.py  run_alpha25.py  run_federation1.py  run_federation15.py  sprint3b2_causal_intelligence_test.py  test_3b1_causal_integrity.py
.alpha/: fed_baseline_001.json  fed_result_001.json  fed_result_15.json
chaos/: __init__.py
chaos/harness/: __init__.py  causal_mutator.py  chaos_profile.py  fault_injector.py  runtime_distorter.py  timing_distorter.py  wal_mutator.py
checkpoints/: bases.json
checkpoints/deltas/: delta_cp_1780432919.1646955.json  delta_cp_1780432922.1313329.json  delta_cp_1780432925.1428952.json  delta_cp_1780432928.1454833.json  delta_cp_1780433336.9431021.json  delta_cp_1780433553.8603516.json  delta_cp_1780433622.5868018.json  delta_cp_1780433678.978239.json  delta_cp_1780433867.2584493.json  delta_cp_1780434144.3370373.json  delta_cp_1780434148.9905396.json  delta_cp_1780434155.6296327.json  delta_cp_1780434164.2576604.json  delta_cp_1780434174.2310412.json  delta_cp_1780439050.7670887.json  delta_cp_1780439054.6022503.json  delta_cp_1780439059.643521.json  delta_cp_1780439065.3015358.json  delta_cp_1780439943.0010734.json  delta_cp_1780439946.7824814.json  delta_cp_1780439951.581626.json  delta_cp_1780439957.4910445.json  (+38 more)
cognitive_runtime/: __init__.py
host_abstraction/: __init__.py
tests/: conftest.py
(+377 files in other folders)
