[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "stocky-engineering-os"
version = "0.1.0"
description = "Self-observing cognitive operating kernel"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"

[project.urls]
Homepage = "https://github.com/stocky/stocky-engineering-os"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
